# django-events-framework

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  ROADMAP.md  build.sh  docker-compose.yml  entrypoint.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
def/: setup.cfg
def/def/: asgi.py  settings.py  urls.py  wsgi.py
def/events_framework/: tests.py
def/events_framework/management/commands/: process_events.py
def/test_app/: models.py
def/test_app/events/: __init__.py  generators.py  processors.py
def/test_app/migrations/: 0001_initial.py
events_framework/: __init__.py  apps.py  decorators.py  manager.py  utils.py
test_app/: models.py  settings.py  tests.py
test_app/events/: __init__.py  generators.py  processors.py
test_app/migrations/: 0001_initial.py  0002_auto_20220208_1247.py  0003_auto_20230524_1506.py  0004_alter_personevent_error_message.py
