[flake8]
ignore = E128,E731,W503,W504
max-line-length = 512
exclude=venv/

[tool:pytest]
DJANGO_SETTINGS_MODULE=test_app.settings
norecursedirs=venv* .tox .eggs build dist events_framework.egg-info .git build node_modules
addopts = --doctest-modules --doctest-ignore-import-errors
python_files=test*.py

[isort]
combine_as_imports = true
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
include_trailing_comma = true
known_django = django
known_first_party = events_framework
multi_line_output = 5
line_length=128

[pycodestyle]
count = False
max-line-length = 512
statistics = True
ignore = D100,D101,D102,D103,D104,D105,D106,D107,D202,D203,D205,D210,D212,D400,D406,D407,D412,D413

[metadata]
name = django-events-framework
version = 0.0.14
description = An events framework for logging and processing Django models events.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Reve/django-events-framework
license = MIT
author = Alexandru Gheorghita
author_email = gheorghitacristian@mac.com
maintainer = Alexandru Gheorghita
maintainer_email = gheorghitacristian@mac.com
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
install_requires =
    django>=2.2
    jsonfield>=3.1.0
python_requires = >=3.6

[options.packages.find]
exclude = test_app*
